<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.LeaderboardActivity">

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/app_title"
    android:textSize="30sp"
    android:gravity="center_horizontal|center_vertical" />

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/leader_board"
    android:layout_marginTop="100dp"
    android:textSize="30sp"
    android:gravity="center_vertical|center_horizontal"/>

  <TextView
    android:id="@+id/data_record"
    android:layout_width="match_parent"
    android:layout_height="470dp"
    android:layout_marginTop="150dp"
    android:gravity="center_horizontal"
    android:textSize="20sp" />

  <Button
    android:id="@+id/button_back"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/button_back"
    android:textSize="17sp"
    android:layout_marginTop="650dp"
    android:layout_marginStart="300dp" />

  <Button
    android:id="@+id/button_query"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="100dp"
    android:layout_marginTop="650dp"
    android:textSize="17sp"
    android:text="@string/button_query" />

  <Button
    android:id="@+id/button_delete"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="200dp"
    android:layout_marginTop="650dp"
    android:textSize="17sp"
    android:text="@string/button_delete" />

</RelativeLayout>