<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.MainActivity">

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical|center_horizontal"
    android:typeface="monospace"
    android:textSize="30sp"
    android:text="@string/app_title"
    />

  <EditText
    android:id="@+id/user_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="140dp"
    android:gravity="center_vertical|center_horizontal"
    android:typeface="monospace"
    android:autofillHints="@string/input_name"
    android:hint="@string/input_name"
    android:inputType="textPersonName"
    />

  <Button
    android:id="@+id/button_game_start"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="200dp"
    android:typeface="monospace"
    android:textSize="30sp"
    android:text="@string/button_start"
    />

  <Button
    android:id="@+id/button_exit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="500dp"
    android:layout_marginBottom="50dp"
    android:typeface="monospace"
    android:textSize="30sp"
    android:text="@string/button_exit"
    />

</RelativeLayout>